Project

General

Profile

Actions

Bug #41780

closed

[trash] cannot restore mirroring sourced images

Added by Jason Dillaman over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Starting w/ Nautilus, the rbd CLI only allows user sourced trash images to be restored. This was broken when live-migration was introduced and this restriction should be removed.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #41882: mimic: [trash] cannot restore mirroring sourced imagesResolvedJason DillamanActions
Copied to rbd - Backport #41883: nautilus: [trash] cannot restore mirroring sourced imagesResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 30351
Actions #3

Updated by Jason Dillaman over 4 years ago

  • Backport changed from nautilus to nautilus,mimic

Needs a partial backport to mimic for all but first commit.

Actions #4

Updated by Mykola Golub over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41882: mimic: [trash] cannot restore mirroring sourced images added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41883: nautilus: [trash] cannot restore mirroring sourced images added
Actions #7

Updated by Jason Dillaman over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF