rbd-mirror: prevent restored trash images from being deleted after delay

The image deleter wasn't verifying whether or not an image was still in the trash
prior to deleting the image. This not only would incorrectly remove any restored
images but it will also leave the image id object and entry within the directory.

Fixes: https://tracker.ceph.com/issues/41780
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit f091a31d5252bba76598fffdc997275ca531621d)

Conflicts:
	src/test/rbd_mirror/image_deleter/test_mock_TrashRemoveRequest.cc: removed state test cases
	src/tools/rbd_mirror/image_deleter/TrashRemoveRequest.h/cc: removed state validation